@@ -22,11 +22,11 @@
 # sub-dictionary. Default is false.
 #fields_under_root: false
 
-# How often (in seconds) shippers are publishing their IPs to the topology map.
+# DEPRECATED: How often (in seconds) shippers are publishing their IPs to the topology map.
 # The default is 10 seconds.
 #refresh_topology_freq: 10
 
-# Expiration time (in seconds) of the IPs published by a shipper to the topology map.
+# DEPRECATED: Expiration time (in seconds) of the IPs published by a shipper to the topology map.
 # All the IPs will be deleted afterwards. Note, that the value must be higher than
 # refresh_topology_freq. This setting is used only by the Redis output. The other
 # outputs don't support expiring entries.
@@ -131,7 +131,7 @@ output.elasticsearch:
   # requests are made.
   #flush_interval: 1s
 
-  # Boolean that sets if the topology is kept in Elasticsearch. The default is
+  # DEPRECATED: Boolean that sets if the topology is kept in Elasticsearch. The default is
   # false. This option makes sense only for Packetbeat.
   #save_topology: false
 
@@ -396,15 +396,15 @@ output.elasticsearch:
   # PUBLISH command is used. The default value is list.
   #datetype: list
 
-  # The Redis host to connect to when using topology map support. Topology map
+  # DEPRECATED: The Redis host to connect to when using topology map support. Topology map
   # support is disabled if this option is not set.
   #host_topology:
 
-  # The password to use for authenticating with the Redis topology server. The
+  # DEPRECATED: The password to use for authenticating with the Redis topology server. The
   # default is no authentication.
   #password_topology:
 
-  # The Redis database number where the topology information is stored. The
+  # DEPRECATED: The Redis database number where the topology information is stored. The
   # default is 1.
   #db_topology: 1
 
