@@ -39,20 +39,16 @@ output:
   # Elasticsearch as output
   # Options:
   # host, port: where Elasticsearch is listening on
-  # save_topology: specify if the topology is saved in Elasticsearch
   #elasticsearch:
   #  host: localhost
   #  port: 9200
-  #  save_topology: true
 
   # Redis as output
   # Options:
   # host, port: where Redis is listening on
-  # save_topology: specify if the topology is saved in Redis
   #redis:
   #  host: localhost
   #  port: 6379
-  #  save_topology: true
 
   # File as output
   # Options
